@@ -1,3 +1,8 @@
+2007-03-16  OHASHI Akira  <bg66@koka-in.org>
+
+	* mixi-ticker.el: New file.
+	* Makefile.am (MODULES_MIXI): Add it.
+
 2007-03-15  OHASHI Akira  <bg66@koka-in.org>
 
 	* contrib/atom.cgi: New file.
